更新黑色版本的 article

--- a/sass/partial/_article.scss
+++ b/sass/partial/_article.scss
@@ -74,6 +74,12 @@
     }
   }
 
+  &.article_black-bg {
+    color: #ddd;
+    #{headings()} {
+      color: white;
+    }
+  }
 
   @include at-breakpoint($pad) {
 
