--- a/video/show.html.slim
+++ b/video/show.html.slim
@@ -21,9 +21,9 @@
         a.post-share-btn.icon-line href="#" target="_blank"
       .post-meta
         span.post-date 2015.7.23
-    .post-content.article
+    .post-content.article.article_black-bg
       .container.container_single-article
-        p.post-summary= zh_lorem_paragraphs(2)
+        = render "/partial/demo-article"
     .post-footer
       .pager
         a.pager-item.prev href="#": .pager-title 上一篇
