調整影片頁的 pager 文字顏色

--- a/sass/partial/_post.scss
+++ b/sass/partial/_post.scss
@@ -367,7 +367,7 @@
     color: white;
   }
   .pager-item {
-    color: #183840;
+    color: #11272C;
   }
   .prev:before {
     border-color: transparent rgba(#ddd, 0.5) transparent transparent;
