取消手機與平板上的 youtube cover

--- a/video/show.html.slim
+++ b/video/show.html.slim
@@ -8,7 +8,7 @@
       .post-cover
         .post-player
           .post-player-inner
-            <iframe id="video" class="post-player-iframe" src="https://www.youtube.com/embed/F52Rg-_ktk4?enablejsapi=1&html5=1" frameborder="0" allowfullscreen></iframe>
+            <iframe id="video" class="post-player-iframe" src="https://www.youtube.com/embed/F52Rg-_ktk4?enablejsapi=1&html5=1&showinfo=0" frameborder="0" allowfullscreen></iframe>
         .post-cover-image style="background-image: url('/images/post-header-image.jpg')"
           a#play-btn.play-btn.icon-play
         .post-cover-inner
