--- a/sass/partial/_post.scss
+++ b/sass/partial/_post.scss
@@ -302,13 +302,6 @@
     position: relative;
     background-color: transparent;
     @include background-image(none);
-    &.is-playing {
-      .post-cover-image {
-        visibility:hidden;
-        opacity:0;
-        @include transition(visibility 0s 0.5s, opacity 0.5s);
-      }
-    }
   }
   .post-player {
     position: relative;
@@ -324,37 +317,10 @@
     height: 100%;
   }
   .post-cover-image {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 0;
-    padding-top: 56.25%;
-    @include opacity(1);
-    &:before {
-      top: 48px;
-      @include background-image(linear-gradient(to bottom, rgba(black, 0), rgba(black, 0.5)));
-    }
+    display: none;
   }
   .post-cover-inner {
     padding: 24px 24px 0;
-  }
-  .play-btn {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-left: -30px;
-    margin-top: -30px;
-    display: block;
-    width: 60px;
-    color: white;
-    @include adjust-font-size-to(60px, 2.5);
-    @include transition(opacity 0.25s);
-    cursor: pointer;
-    &:hover {
-      @include opacity(0.8);
-      text-decoration: none;
-    }
   }
   .post-share {
     .post-share-btn {
@@ -384,13 +350,19 @@
   }
   .pager-title {
     background-color: rgba(#ddd, 0.5);
+    @include leader(0);
   }
 
-  @include at-breakpoint($pad) {
+  @include at-breakpoint($desktop) {
     .post-cover {
       background-color: black;
       &.is-playing {
         .post-cover-inner {
+          visibility:hidden;
+          opacity:0;
+          @include transition(visibility 0s 0.5s, opacity 0.5s);
+        }
+        .post-cover-image {
           visibility:hidden;
           opacity:0;
           @include transition(visibility 0s 0.5s, opacity 0.5s);
@@ -401,7 +373,39 @@
       height: auto;
       padding-top: 0;
       max-width: 960px;
+      width: 100%;
       margin: 0 auto;
+    }
+    .post-cover-image {
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 0;
+      padding-top: 56.25%;
+      @include opacity(1);
+      &:before {
+        top: 48px;
+        @include background-image(linear-gradient(to bottom, rgba(black, 0), rgba(black, 0.5)));
+      }
+    }
+    .play-btn {
+      display: block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      margin-top: -48px;
+      margin-left: -48px;
+      width: 96px;
+      @include adjust-font-size-to(84px, 4);
+      color: white;
+      @include transition(opacity 0.25s);
+      cursor: pointer;
+      &:hover {
+        @include opacity(0.8);
+        text-decoration: none;
+      }
     }
     .post-player-inner {
       position: relative;
@@ -412,42 +416,14 @@
       height: 100%;
       padding-top: 0;
     }
-    .play-btn {
-      @include adjust-font-size-to(72px, 4);
-      width: 96px;
-      height: 96px;
-      margin-top: -48px;
-      margin-left: -48px;
-    }
     .post-cover-inner {
       position: absolute;
       left: 0;
       right: 0;
       bottom: 0;
       margin: 0 auto;
-      padding: 24px 24px 5%;
-      max-width: 560px;
-    }
-    .post-title {
-      // @include adjust-font-size-to(28px, 1.5);
-    }
-  }
-
-  @include at-breakpoint(840px) {
-    .post-player {
-      width: 90%;
-    }
-  }
-
-  @include at-breakpoint($desktop) {
-    .post-player {
-      width: 100%;
-    }
-    .post-cover-inner {
       padding: 48px;
-    }
-    .play-btn {
-      @include adjust-font-size-to(84px, 4);
+      max-width: 560px;
     }
     .post-title {
       @include adjust-font-size-to(36px, 2);
