--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -865,14 +865,10 @@ body { background-color: #183840; position: relative; }
 @media (min-width: 640px) and (max-height: 640px) { .post_bg-image-style .post-cover-inner { padding-top: 240px; } }
 
 .post_video .post-cover { margin: 0 0 12px; position: relative; background-color: transparent; background-image: none; }
-.post_video .post-cover.is-playing .post-cover-image { visibility: hidden; opacity: 0; -webkit-transition: visibility 0s, opacity 0.5s; -webkit-transition-delay: 0.5s, 0s; -moz-transition: visibility 0s 0.5s, opacity 0.5s; -o-transition: visibility 0s 0.5s, opacity 0.5s; transition: visibility 0s 0.5s, opacity 0.5s; }
 .post_video .post-player { position: relative; width: 100%; height: 0; padding-top: 56.25%; }
 .post_video .post-player-iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
-.post_video .post-cover-image { position: absolute; top: 0; left: 0; width: 100%; height: 0; padding-top: 56.25%; opacity: 1; }
-.post_video .post-cover-image:before { top: 48px; background-image: -webkit-gradient(linear, to bottom, to top, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(0, 0, 0, 0.5))); background-image: -webkit-linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)); background-image: -moz-linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)); background-image: -o-linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)); background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)); }
+.post_video .post-cover-image { display: none; }
 .post_video .post-cover-inner { padding: 24px 24px 0; }
-.post_video .play-btn { position: absolute; top: 50%; left: 50%; margin-left: -30px; margin-top: -30px; display: block; width: 60px; color: white; font-size: 60px; line-height: 60px; -webkit-transition: opacity 0.25s; -moz-transition: opacity 0.25s; -o-transition: opacity 0.25s; transition: opacity 0.25s; cursor: pointer; }
-.post_video .play-btn:hover { opacity: 0.8; text-decoration: none; }
 .post_video .post-share .post-share-btn { color: rgba(255, 255, 255, 0.75); }
 .post_video .post-summary { max-width: 560px; margin: 0 auto; color: white; }
 .post_video .pager-item { color: #11272C; }
@@ -880,18 +876,18 @@ body { background-color: #183840; position: relative; }
 .post_video .pager-item_return { color: #ccc; border-bottom: 2px solid rgba(221, 221, 221, 0.5); }
 .post_video .pager-item_return:hover { color: white; }
 .post_video .next:before { border-color: transparent transparent transparent rgba(221, 221, 221, 0.5); }
-.post_video .pager-title { background-color: rgba(221, 221, 221, 0.5); }
-@media (min-width: 640px) { .post_video .post-cover { background-color: black; }
+.post_video .pager-title { background-color: rgba(221, 221, 221, 0.5); margin-top: 0px; }
+@media (min-width: 1025px) { .post_video .post-cover { background-color: black; }
   .post_video .post-cover.is-playing .post-cover-inner { visibility: hidden; opacity: 0; -webkit-transition: visibility 0s, opacity 0.5s; -webkit-transition-delay: 0.5s, 0s; -moz-transition: visibility 0s 0.5s, opacity 0.5s; -o-transition: visibility 0s 0.5s, opacity 0.5s; transition: visibility 0s 0.5s, opacity 0.5s; }
-  .post_video .post-player { height: auto; padding-top: 0; max-width: 960px; margin: 0 auto; }
+  .post_video .post-cover.is-playing .post-cover-image { visibility: hidden; opacity: 0; -webkit-transition: visibility 0s, opacity 0.5s; -webkit-transition-delay: 0.5s, 0s; -moz-transition: visibility 0s 0.5s, opacity 0.5s; -o-transition: visibility 0s 0.5s, opacity 0.5s; transition: visibility 0s 0.5s, opacity 0.5s; }
+  .post_video .post-player { height: auto; padding-top: 0; max-width: 960px; width: 100%; margin: 0 auto; }
+  .post_video .post-cover-image { display: block; position: absolute; top: 0; left: 0; width: 100%; height: 0; padding-top: 56.25%; opacity: 1; }
+  .post_video .post-cover-image:before { top: 48px; background-image: -webkit-gradient(linear, to bottom, to top, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(0, 0, 0, 0.5))); background-image: -webkit-linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)); background-image: -moz-linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)); background-image: -o-linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)); background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)); }
+  .post_video .play-btn { display: block; position: absolute; top: 50%; left: 50%; margin-top: -48px; margin-left: -48px; width: 96px; font-size: 84px; line-height: 96px; color: white; -webkit-transition: opacity 0.25s; -moz-transition: opacity 0.25s; -o-transition: opacity 0.25s; transition: opacity 0.25s; cursor: pointer; }
+  .post_video .play-btn:hover { opacity: 0.8; text-decoration: none; }
   .post_video .post-player-inner { position: relative; width: 100%; padding-top: 56.25%; }
   .post_video .post-cover-image { height: 100%; padding-top: 0; }
-  .post_video .play-btn { font-size: 72px; line-height: 96px; width: 96px; height: 96px; margin-top: -48px; margin-left: -48px; }
-  .post_video .post-cover-inner { position: absolute; left: 0; right: 0; bottom: 0; margin: 0 auto; padding: 24px 24px 5%; max-width: 560px; } }
-@media (min-width: 840px) { .post_video .post-player { width: 90%; } }
-@media (min-width: 1025px) { .post_video .post-player { width: 100%; }
-  .post_video .post-cover-inner { padding: 48px; }
-  .post_video .play-btn { font-size: 84px; line-height: 96px; }
+  .post_video .post-cover-inner { position: absolute; left: 0; right: 0; bottom: 0; margin: 0 auto; padding: 48px; max-width: 560px; }
   .post_video .post-title { font-size: 36px; line-height: 48px; } }
 
 .article .lead { margin-top: 0px; }
