--- a/sass/page/_video-page.scss
+++ b/sass/page/_video-page.scss
@@ -9,6 +9,11 @@
     @include at-breakpoint($pad) {
       @include trailer(2);
     }
+
+    .container.container_single-article {
+      max-width: 560px;
+      text-align: center;
+    }
   }
 
 
