--- a/sass/partial/_post.scss
+++ b/sass/partial/_post.scss
@@ -379,6 +379,7 @@
       width: 100%;
       height: 0;
       padding-top: 56.25%;
+      background-color: black;
       @include opacity(1);
       &:before {
         top: 48px;
