--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -880,7 +880,7 @@ body { background-color: #183840; position: relative; }
   .post_video .post-cover.is-playing .post-cover-inner { visibility: hidden; opacity: 0; -webkit-transition: visibility 0s, opacity 0.5s; -webkit-transition-delay: 0.5s, 0s; -moz-transition: visibility 0s 0.5s, opacity 0.5s; -o-transition: visibility 0s 0.5s, opacity 0.5s; transition: visibility 0s 0.5s, opacity 0.5s; }
   .post_video .post-cover.is-playing .post-cover-image { visibility: hidden; opacity: 0; -webkit-transition: visibility 0s, opacity 0.5s; -webkit-transition-delay: 0.5s, 0s; -moz-transition: visibility 0s 0.5s, opacity 0.5s; -o-transition: visibility 0s 0.5s, opacity 0.5s; transition: visibility 0s 0.5s, opacity 0.5s; }
   .post_video .post-player { height: auto; padding-top: 0; max-width: 960px; width: 100%; margin: 0 auto; }
-  .post_video .post-cover-image { display: block; position: absolute; top: 0; left: 0; width: 100%; height: 0; padding-top: 56.25%; opacity: 1; }
+  .post_video .post-cover-image { display: block; position: absolute; top: 0; left: 0; width: 100%; height: 0; padding-top: 56.25%; background-color: black; opacity: 1; }
   .post_video .post-cover-image:before { top: 48px; background-image: -webkit-gradient(linear, to bottom, to top, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(0, 0, 0, 0.5))); background-image: -webkit-linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)); background-image: -moz-linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)); background-image: -o-linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)); background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)); }
   .post_video .play-btn { display: block; position: absolute; top: 50%; left: 50%; margin-top: -48px; margin-left: -48px; width: 96px; font-size: 84px; line-height: 96px; color: white; -webkit-transition: opacity 0.25s; -moz-transition: opacity 0.25s; -o-transition: opacity 0.25s; transition: opacity 0.25s; cursor: pointer; }
   .post_video .play-btn:hover { opacity: 0.8; text-decoration: none; }
@@ -1297,7 +1297,7 @@ body { background-color: #183840; position: relative; }
 .video-page .page-inner { background-color: #11272C; }
 .video-page .post { margin-bottom: 24px; }
 @media (min-width: 640px) { .video-page .post { margin-bottom: 48px; } }
-.video-page .post .container.container_single-article { max-width: 560px; text-align: center; }
+.video-page .post .container.container_single-article { max-width: 560px; }
 
 .hide-phone { display: none; }
 @media (min-width: 640px) { .hide-phone { display: block; } }
