首頁旗幟區塊新增影片專區

--- a/partial/_hero.html.slim
+++ b/partial/_hero.html.slim
@@ -21,8 +21,11 @@
               .title.auto-break-text 小額捐款
               .description.auto-break-text 這是一段文字敘述
     .hero-block-wrap
-      a.hero-block.medium style="background-image: url('/images/hero-4.jpg')" href="http://light.iing.tw" target="_blank"
+      a.hero-block.medium style="background-image: url('/images/hero-video.jpg')" href="http://light.iing.tw" target="_blank"
+        video.video-bg autoplay="true" loop="true"
+          source src="/images/hero-video.webm" type="video/webm"
+          source src="/images/video-bg.mp4" type="video/mp4"
         .hero-block-title
           .hero-block-title-inner
-            .title.auto-break-text 在地希望生活節
-            .description.auto-break-text 這是一段文字敘述，可以寫大約50字左右，超過會沒辦法顯示，建議在25到55字之間。這是一段文字敘述。
+            .title.auto-break-text 小英足跡・影片專區
+            .description 我們正走在點亮台灣的第一哩路。<br>每支影片都是我們所踏出的一步。
