--- a/partial/_hero.html.slim
+++ b/partial/_hero.html.slim
@@ -22,9 +22,10 @@
               .description.auto-break-text 這是一段文字敘述
     .hero-block-wrap
       a.hero-block.medium style="background-image: url('/images/hero-video.jpg')" href="http://light.iing.tw" target="_blank"
-        video.video-bg autoplay="true" loop="true"
+        video.video-bg autoplay="true" loop="true" poster="/images/hero-video-thumb.jpg"
+          source src="/images/hero-video.mp4" type="video/mp4"
           source src="/images/hero-video.webm" type="video/webm"
-          source src="/images/video-bg.mp4" type="video/mp4"
+          source src="/images/hero-video.ogg" type="video/ogg"
         .hero-block-title
           .hero-block-title-inner
             .title.auto-break-text 小英足跡・影片專區
