--- a/sass/partial/_hero.scss
+++ b/sass/partial/_hero.scss
@@ -254,6 +254,7 @@
       min-height: 100%;
       width: auto;
       height: auto;
+      background-color: black;
       -webkit-transform: translateX(-50%) translateY(-50%);
       transform: translateX(-50%) translateY(-50%);
     }
