住宅政策頁面新增主題圖片與動態圖表資料&JS

--- a/policies/_layout.html.slim
+++ b/policies/_layout.html.slim
@@ -9,6 +9,7 @@ html lang="zh-TW"
       "/vendor/prelude-browser-min.js", \
       "barchart", \
       "linechart", \
+      "dountchart", \
       "chartdata"
     = render "/layout_siteinfo"
     = render "/layout_og"
