--- a/policies/housing-policy.html.slim
+++ b/policies/housing-policy.html.slim
@@ -9,12 +9,12 @@
       li.scroll-spy-menu-item: a href="#section-1" 現狀
       li.scroll-spy-menu-item: a href="#section-2" 政策
       li.scroll-spy-menu-item: a href="#section-3" 總結
-  .policy-header style="background-image: url('/images/policies_image/food_safely/page_header_bg.jpg')"
+  .policy-header style="background-image: url('/images/policies_image/housing_policy/page_header_bg.jpg')"
     .header-title
       .header-title-inner
         ul.policy-category: li: a href="http://iing.tw/categories/政策" 政策
-        h1.main-title 住宅政策懶人包
-        h2.main-sub-title
+        h1.main-title 安心居住政策
+        h2.main-sub-title 居住，是人的基本權利
   .post
     .post-share
       span.post-share-title 分享：
@@ -23,17 +23,17 @@
       a.post-share-btn.icon-plurk href="#"
       a.post-share-btn.icon-line href="#"
     .post-meta
-      span.post-date 2015.9.4
+      span.post-date 2015.10.23
       a.post-tag href="http://iing.tw/tags/食品安全" 住宅政策
 
   .section
-    blockquote: p 我今天要講一段具有歷史意義的話，一段感動群眾的話，一段深植人心的話。讓這段話語成為台灣改變的力量。
+    blockquote: p 每天辛苦賺錢，要買間房子，卻是連想都不敢想的一個夢想。高房價、高空屋、低收入，這是台灣社會長期以來的困境。這個困境，不是不能突破，而是有沒有具體的行動去面對它、處理它。<br>我們的目標，就是要建立符合民生需求的住宅政策，以及可以有效發展內需的不動產產業體系。
     .blockquote-name: span 蔡英文
 
   .section-class.gray-block.scroll-spy-section#section-1 data-spy-index="1"
     span.animation.fade-in 現狀
 
-  .section.image-theme style="background-image: url('/images/policies_image/food_safely/reason_bg.jpg')"
+  .section.image-theme style="background-image: url('/images/policies_image/housing_policy/reason_bg.jpg')"
     .center-content
       .text-content
         h3.section-title 台灣居住現象的<br>「三高兩低」
@@ -55,16 +55,28 @@
           p 2011年統計，台灣公有出租國宅佔全國住宅總量0.08%，其他各國：荷蘭34%、英國20%、日本6.06%、美國6%、韓國55%。
 
       .figure
-        img src="http://placehold.it/960x480/333333/"
+        h4.section-sub-title 台北市、新北市的房價所得比在八年內增加一倍
+        .houseprice-to-income-chart
+        p.text-center 資料來源：房價所得比：<a href="http://pip.moi.gov.tw/V2/E/SCRE0201.aspx" target="_blank">內政部不動產資訊平台</a> (2015 年)
 
       .text-content
         p.note <mark>負擔能力指標定義與意義</mark><br>房價所得比：房價所得比＝中位數房屋總價／家戶年可支配所得中位數。<br>貸款負擔率：貸款負擔率＝中位數房價貸款月攤還額家戶月可支配所得中位數。<br>（以20年本利均等攤還，貸款成數七成計算）
 
         p 依據內政部編製房價負擔能力指標，2014 年底全國20縣市中有10縣市的房價負擔超過合理標準，其中台北市與新北市屬於負擔能力嚴重偏低狀況。從六大區域114處主要鄉鎮市區數據觀察，有24 處屬於房價負擔能力嚴重偏低，10 處屬偏低，26 處屬略低，顯示各縣市均存在房價負擔問題，並非雙北市獨有之問題。
 
-      .figure
-        img src="http://placehold.it/960x480/333333/"
+    .multi-col-content.house-pp-chart
+      .multi-col-content-inner
+        .col-3-content
+          p.text-center 全國空屋數高達 156 萬戶
+          .empty-house-data
+        .col-3-content
+          p.text-center 以用電度數保守推估低度使用住宅
+          .electric-house-data
+        .col-3-content
+          p.text-center 房屋自有率高於其他已開發國家 50%
+          .self-house-data
 
+    .center-content
       .text-content
         p 依據2010年行政院主計總處住宅普查資料，全國空屋數高達156萬戶，空屋率接近20%；以用電度數推估之保守結果，全國低度使用住宅數也高達86.7萬戶，占住宅存量約10.5%。台北市房價明顯高於世界其他主要城市；全國空屋率則幾乎是全球最高，高價資產閒置與供給過剩問題極度嚴重。
         p 當前國內住宅自有率也幾乎是全球最高。先進國家的住宅自有率多長期維持50%~70%間，觀察自有率超過八成的國家，除新加坡外，均屬都市化程度較低的國家。國人將過多的資源與所得投入購屋活動，住宅消費方式嚴重向購屋傾斜，社會住宅與租屋市場未能受到合理發展。
@@ -112,6 +124,10 @@
   .section-class.gray-block.scroll-spy-section#section-2 data-spy-index="2"
     span.animation.fade-in 政策
 
+  .section
+    blockquote.bigtext.animation.slide-up: p 國家的「住宅政策」，不能只是「房地產政策」。<br>我們提出來的住宅政策，包含了全面的思維，除了要讓人民都有安定生活的居住選擇，也要發展不動產的四大新興產業，包括「都市更新」、「物業管理」、「租屋產業」與「社會住宅」，來帶動經濟的發展。
+    .blockquote-name: span 蔡英文
+
   .section.white-block
     .center-content
       .text-content
@@ -153,6 +169,22 @@
               li 以「政府興辦為主，引導民間興辦為輔」為原則，強制要求內政部與各地方政府依據住宅法第5條規定，於「法定住宅政策」與「法定住宅計畫」中，明確提出社會住宅興辦計畫與進度，以執政8年內全國完成規劃與興建20萬戶為目標。
               li 社會住宅的<strong>土地來源</strong>，將社會住宅訂為都市計劃中的公共設施項目，並以公有非公用土地無償撥用，或低價承租為原則，否則一旦土地價格納入興辦成本計算，實施者的財務壓力勢必無法承擔。
               li 社會住宅興辦資金，以「長期低利融資為主，編列公務預算為輔」原則，以各期租金收入償還融資本息為核心，租金收入不足時，搭配公務預算補貼；也因為社會住宅提供政府長期使用，因此由長期各屆執政者分別承擔，方屬公平合理。
+
+            p 然而，要落實社會住宅，仍需回答三大問題：
+
+            ul.faq-list
+              li
+                .question 20萬戶社會住宅怎麼實現？
+                .answer <strong>60-70% 由政府出資新建</strong><br> 中央協助地方：取得無償低價土地及長期低利融資。<br>政府與民間協力：興建與經營均採政府主導與委託民間雙軌方式。<br><strong>10-20%政府以容積獎勵，鼓勵民間興建</strong><br>容積獎勵：引導新建案與都更開發案回饋。<br>分回方式：採取按戶、按層與按棟方式分回。<br><strong>20-30%政府購買民間私有住宅，包租代管</strong><br>專責機構：以新法制承租與管理民間空屋。<br>社福經營：由社福團體經營提供弱勢族群居住。
+              li
+                .question 長期低利融資，也就是向銀行貸款，會不會債留子孫？
+                .answer 不會。社會住宅屬於「自償性公共債務」，先由政府向銀行貸款興建，啟用後以承租人的房租在50年內攤還，沒有債留子孫的問題。
+              li
+                .question 70-80%新建的社會住宅，地要從哪裡來?
+                .answer 以公有土地爲來源。<br>1.縣市有土地優先使用。<br>2.國有土地無償撥用借用。
+
+            p.note <mark>這些土地說用就用嗎？</mark><br>根據《住宅法》第24條「直轄市、縣（市）主管機關依前條規定興辦社會住宅，需用非公用之公有土地或建築物者，得辦理撥用；因整體規劃使用之需要，得與鄰地交換分合。」<br>根據《土地法》第26條或《國有財產法》第38條辦理撥用時，以「無償撥用」為原則。2014年5月28日修正通過，明定「社會住宅」屬於無償撥用項目。<br>一項改革性政策要成功，要有周延的規劃，更需要執行的決心。韓國從2008年起，四年內完成18萬7千戶社會住宅，目前全國社會住宅比例高達一半，台灣的腳步已經慢了，我們難道還要繼續口水爭辯，裹足不前嗎？
+
           li.animation.fade-in
             h4.section-sub-title 縣市政府合作
             p 各縣市應針對興辦社會住宅地點與建築規劃，分別評估個別與整體財務結構。
@@ -244,8 +276,8 @@
   .section
     .center-content
       .text-content
-        h3.section-title 總結標題
-        p 總結內容總結內容總結內容總結內容總結內容總結內容
+        h3.section-title 落實居住正義，也提振國內經濟
+        p 居住問題已經變成我們社會的正義問題。居住問題要改善並非天方夜譚，要不要做，有沒有能力做，才是關鍵。當年蔡英文率先提出社會住宅政策，現在，不分藍綠，許多縣市都把社會住宅當作重要政策。<br>這些年來，我們不斷和來自地方政府、產業界、學界、社運界的專業人士研討，提出這份完整而務實的安居三策，希望能真正落實居住正義。民進黨已經做好準備，我們有能力、有決心，一定要實現！
 
       .figure
         img.image.animation.fade-in src="/images/policies_image/housing_policy/hp3_1.svg"
