--- a/sass/page/policies-page/_chartstyle.sass
+++ b/sass/page/policies-page/_chartstyle.sass
@@ -47,5 +47,28 @@
     font-size: 18px
     fill: white
 
+.houseprice-to-income-chart
 
+  text
+    font-size: 18px
+    fill: white
 
+  .axis path, .axis line
+    fill: none
+    stroke: white
+    stroke-width: 1px
+    shape-rendering: crispEdges
+
+  .axis text
+    font-size: 18px
+    fill: white
+    shape-rendering: crispEdges
+
+.house-pp-chart
+
+  text
+    font-size: 18px
+    fill: white
+
+    &.numbers
+      font-size: 60px
