--- a/sass/page/policies-page/_list.sass
+++ b/sass/page/policies-page/_list.sass
@@ -1,5 +1,34 @@
 .list
+  margin-bottom: 24px
   padding-left: 24px
+  list-style: disc
+
+.faq-list
+  list-style: none
+
+  .question, .answer
+    position: relative
+    padding-left: 24px
+    &:before
+      position: absolute
+      top: 2px
+      left: 0
+      font-size: 28px
+      font-family: "DINWebPro", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Light", "STHeitiTC-Light","Microsoft JhengHei", sans-serif
+
+  .question
+    margin-bottom: 12px
+    &:before
+      content: "Q"
+      color: #525252
+
+  .answer
+    margin-bottom: 24px
+    &:before
+      content: "A"
+      color: #50B584
+
+
 
 .order-list, .todo-list
   list-style: none
@@ -33,7 +62,7 @@
       +leader(0)
       +trailer(.5)
       padding-left: 0
-      list-style: disc
+      // list-style: disc
 
       &:before
         display: none
