修正食安政策頁面文字內容

--- a/policies/food-safely.html.slim
+++ b/policies/food-safely.html.slim
@@ -62,6 +62,7 @@
       .text-content
         h3.section-title 我們的食品安全嗎？
         h4.section-sub-title 全國有 84.5％ 的媽媽，對政府目前的食安政策感到憂慮。食安問題已是全國媽媽們第一擔心的問題。我們的食安，到底怎麼了？
+        p.text-center （資料來源：2015.05.09. 民進黨民意調查中心 母親節調查）
       ul.text-content.timeline.animation
         li.fade-in
           span.time 2008
@@ -82,7 +83,7 @@
         li.fade-in.delay-800ms
           span.time 2013
           span.dot: img src="/images/policies_image/food_safely/fs1_5.png"
-          .timeline-content: p 毒澱粉肆虐、胖達人香精麵包、山水劣質米混充台灣米、大統油混充銅葉綠素、毒醬油、豆乾使用油漆染料「皂黃」
+          .timeline-content: p 毒澱粉肆虐、胖達人香精麵包、山水劣質米混充台灣米、食用油混充銅葉綠素、毒醬油、豆乾使用油漆染料「皂黃」
         li.fade-in.delay-1000ms
           span.time 2014
           span.dot: img src="/images/policies_image/food_safely/fs1_6.png"
@@ -93,13 +94,11 @@
           .timeline-content: p 一心防腐劑豆乾、吊白塊潤餅皮、黑心海帶、農藥超標手搖茶、碳酸鎂胡椒粉、孔雀綠蒲燒鰻、藥用石膏米血糕
 
       .text-content
-        p 資料來源：2015.05.09. 民進黨民意調查中心 母親節調查
-      .text-content
         h3.section-title 食安問題根源
       ol.text-content.order-list
         li.animation.fade-in
           h4.section-sub-title 標章很多
-          p 現行複雜的多種農產品及食品認驗證及標章制度、作業規範（如GMP、CAS、GAP、TGAP、TAP、OTAP、UTAP等），共有十八種國家認證標章，連專家、學者、業者都不易釐清，急需進行制度的簡化作業。
+          p 現行複雜的多種農產品及食品認驗證及標章制度、作業規範（如CAS、GAP、TGAP、TAP、OTAP、UTAP等），共有十八種國家認證標章，連專家、學者、業者都不易釐清，急需進行制度的簡化作業。
         li.animation.fade-in
           h4.section-sub-title 主管很多
           p 台灣的食安管理依照不同的主管項目，分別由衛生署、農委會、甚至經濟部、教育部、國防部與環保署等多個機關負責。容易產生業務重疊等現象。遇到食安問題，難以判斷問題源頭、負責機關，容易產生灰色地帶、相互推卸責任的現象。
@@ -154,7 +153,7 @@
           .text-content.animation.fade-in.delay-400ms
             h4.section-sub-title 進口自產全面把關
             p <strong>進口部分：</strong><br>我國食品來源有70％仰賴國外進口，國外進口（完成品）食品、農品做好邊境查驗，管控以海關查驗為主。未來將修改相關辦法，（大部分由業者自主管理，部份重要產品則需安全標示+海關查驗）貿易商檢付農產品之安全標示。
-            p <strong>自產部分：</strong><br>我國食物來源另有30％為國內生產，將全面檢視農地品質，嚴密監控水源品質，並管理農民使用化學農藥及肥料的耕作型態。並以灌排分離作法減少重金屬汙染、防止其他毒物物質傷害農地，淨化水土資源、掌握用藥品質。此外，推廣植物醫生以及友善環境耕作方法，以保護可供永續生產的水源、土壤。
+            p <strong>自產部分：</strong><br>我國食物來源另有30％為國內生產，將全面檢視農地及工廠生產過程，嚴密監控水源品質，並管理農民使用化學農藥及肥料的耕作型態。並以灌排分離作法減少重金屬汙染、防止其他毒物物質傷害農地，淨化水土資源、掌握用藥品質。此外，推廣植物醫生以及友善環境耕作方法，以保護可供永續生產的水源、土壤。
 
   .section
     .center-content
@@ -181,8 +180,8 @@
   .section.white-block
     .center-content
       .text-content
-        h4.section-sub-title 第四環：加重廠商責任
-        p.text-center 評估修改食安法，對生產者課以更重的法律及賠償責任，以督促生產者的自主管理：民進黨籍立委已經多次修改食安法，對生產者課以更重的法律及賠償責任。
+        h4.section-sub-title 第四環：加重惡意黑心廠商責任
+        p.text-center 評估修改食安法，對惡意黑心廠商課以更重的法律及賠償責任，以督促生產者的自主管理：民進黨籍立委已經多次修改食安法，對惡意黑心廠商課以更重的法律及賠償責任。
       .figure.animation.fade-in
         img src="/images/policies_image/food_safely/fs5_1.png"
     .multi-col-content
