--- a/sass/all.scss
+++ b/sass/all.scss
@@ -45,6 +45,7 @@
 @import "partial/scroll-spy";
 @import "partial/video-hero";
 @import "partial/video-list";
+@import "partial/header-google-search";
 
 // ==== page ====
 @import "page/homepage";
